--- a/banking.html
+++ b/banking.html
@@ -68,7 +68,7 @@ body, html {
       </div>
     </div>
       <div class="w3-dropdown-hover">
-      <button class="w3-button w3-black w3-hover-text-red w3-mobile" style="width:283px">BARCLAYSnet</button>
+      <button class="w3-button w3-black w3-hover-text-red w3-mobile" style="width:283px">BARCLAYS iPortal</button>
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
       </div>
     </div>
