--- a/banking.html
+++ b/banking.html
@@ -398,6 +398,23 @@ body, html {
     </div>
   </div>
 </div>
+div id="id17" class="w3-modal w3-animate-opacity">
+  <div class="w3-modal-content w3-card-4">
+    <header class="w3-container w3-blue">
+      <span onclick="document.getElementById('id17').style.display='none'"
+      class="w3-button w3-large w3-display-topright">&times;</span>
+      <h2 class="w3-center">User Management</h2>
+    </header>
+    <div class="w3-container">
+      <p>All user maintenance will be completed in iPortal.</p>
+      <p>To access the <b>User</b> screen, navigate to <b>Admin.</b> This defaults to the <b>'User'</b> menu option.
+        Within this screen you can:<ul type="1"><li>Add/amend/delete a user</li><li>Amend the roles assigned to a user</li>
+          <li>Change a user's status.</li></ul>
+         <img src="Images/BarclaysNET/user_management.png" style="max-width:100%"</img><br>
+         <br>
+    </div>
+  </div>
+</div>
 
 
 </body>
