--- a/banking.html
+++ b/banking.html
@@ -399,7 +399,7 @@ body, html {
     </div>
   </div>
 </div>
-div id="id17" class="w3-modal w3-animate-opacity">
+<div id="id17" class="w3-modal w3-animate-opacity">
   <div class="w3-modal-content w3-card-4">
     <header class="w3-container w3-blue">
       <span onclick="document.getElementById('id17').style.display='none'"
