--- a/banking.html
+++ b/banking.html
@@ -412,6 +412,8 @@ body, html {
         Within this screen you can:<ul type="1"><li>Add/amend/delete a user</li><li>Amend the roles assigned to a user</li>
           <li>Change a user's status.</li></ul>
          <img src="Images/BarclaysNET/user_management.png" style="max-width:100%"</img><br>
+      <p>To add a new user, simply click <b>'Add New User'</b> from within the <b>User</b> screen.</p>
+        <img src="Images/BarclaysNET/new_user_screen.png" style="max-width:100%"</img><br>
          <br>
     </div>
   </div>
