--- a/banking.html
+++ b/banking.html
@@ -413,7 +413,11 @@ body, html {
           <li>Change a user's status.</li></ul>
          <img src="Images/BarclaysNET/user_management.png" style="max-width:100%"</img><br>
       <p>To add a new user, simply click <b>'Add New User'</b> from within the <b>User</b> screen.</p>
-        <img src="Images/BarclaysNET/new_user_screen.png" style="max-width:100%"</img><br>
+        <img src="Images/BarclaysNET/new_user-screen.png" style="max-width:100%"</img><br>
+      <p>To amend a user, click the hamburger menu on the user card. A list of actions will appear, simply select the action you wish to take.</p>
+      <img src="Images/BarclaysNET/amend_user.png" style="max-width:100%"</img><br>
+      <p><b>Please note:</b> Actions that aren't applicable will be greyed out. For example, if a user is active, the <b>Activate User</b> option will be grey.</p>
+      
          <br>
     </div>
   </div>
