--- a/banking.html
+++ b/banking.html
@@ -71,6 +71,7 @@ body, html {
       <button class="w3-button w3-black w3-hover-text-red w3-mobile" style="width:283px">BARCLAYS iPortal</button>
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
        <button onclick="document.getElementById('id17').style.display='inline-block'" class="w3-button w3-blue w3-bar-item w3-center w3-mobile" style="width:283px">User Managerment</button>
+        <button onclick="document.getElementById('id18').style.display='inline-block'" class="w3-button w3-blue w3-bar-item w3-center w3-mobile" style="width:283px">Ordering Security Devices</button>
       </div>
     </div>
   </div>
@@ -417,8 +418,23 @@ body, html {
       <p>To amend a user, click the hamburger menu on the user card. A list of actions will appear, simply select the action you wish to take.</p>
       <img src="Images/BarclaysNET/amend_user.png" style="max-width:100%"</img><br>
       <p><b>Please note:</b> Actions that aren't applicable will be greyed out. For example, if a user is active, the <b>Activate User</b> option will be grey.</p>
-      
-         <br>
+       <br>
+    </div>
+  </div>
+</div>
+<div id="id18" class="w3-modal w3-animate-opacity">
+  <div class="w3-modal-content w3-card-4">
+    <header class="w3-container w3-blue">
+      <span onclick="document.getElementById('id18').style.display='none'"
+      class="w3-button w3-large w3-display-topright">&times;</span>
+      <h2 class="w3-center">Ordering Security Devices</h2>
+    </header>
+    <div class="w3-container">
+      <p>Ordering device readers will be completed in iPortal.</p>
+      <p>To access the <b>Device reader</b> screen, navigate to <b>Admin.</b> This defaults to the <b>'User'</b> menu option. Select the <b>'Device readers'</b> menu option.</p>
+      <p>Simply select the type, quantity and security contact to receive these.</p>
+      <p><b>Please note:</b> Device reader orders do not need authorising.</p>
+       <br>
     </div>
   </div>
 </div>
