--- a/banking.html
+++ b/banking.html
@@ -72,6 +72,7 @@ body, html {
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
        <button onclick="document.getElementById('id17').style.display='inline-block'" class="w3-button w3-blue w3-bar-item w3-center w3-mobile" style="width:283px">User Managerment</button>
         <button onclick="document.getElementById('id18').style.display='inline-block'" class="w3-button w3-blue w3-bar-item w3-center w3-mobile" style="width:283px">Ordering Security Devices</button>
+        <button onclick="document.getElementById('id19').style.display='inline-block'" class="w3-button w3-blue w3-bar-item w3-center w3-mobile" style="width:283px">Primary Legal Entity</button>
       </div>
     </div>
   </div>
@@ -434,6 +435,19 @@ body, html {
       <p>To access the <b>Device reader</b> screen, navigate to <b>Admin.</b> This defaults to the <b>'User'</b> menu option. Select the <b>'Device readers'</b> menu option.</p>
       <p>Simply select the type, quantity and security contact to receive these.</p>
       <p><b>Please note:</b> Device reader orders do not need authorising.</p>
+       <br>
+    </div>
+  </div>
+</div>
+<div id="id19" class="w3-modal w3-animate-opacity">
+  <div class="w3-modal-content w3-card-4">
+    <header class="w3-container w3-blue">
+      <span onclick="document.getElementById('id19').style.display='none'"
+      class="w3-button w3-large w3-display-topright">&times;</span>
+      <h2 class="w3-center">Ordering Security Devices</h2>
+    </header>
+    <div class="w3-container">
+      <h1>Ebbsfleet Property Ltd</h1>
        <br>
     </div>
   </div>
