--- a/banking.html
+++ b/banking.html
@@ -447,7 +447,7 @@ body, html {
       <h2 class="w3-center">Ordering Security Devices</h2>
     </header>
     <div class="w3-container">
-      <h1 class="w3-center">"Ebbsfleet Property Ltd"</h1>
+      <h1 class="w3-center"><b>"Ebbsfleet Property Ltd"</b></h1>
        <br>
     </div>
   </div>
