--- a/banking.html
+++ b/banking.html
@@ -446,7 +446,7 @@ body, html {
       class="w3-button w3-large w3-display-topright">&times;</span>
     </header>
     <div class="w3-container">
-      <h1 class="w3-center"><b>"Ebbsfleet Property Ltd"</b></h1>
+      <h1 class="w3-center w3-margin-top"><b>"Ebbsfleet Property Ltd"</b></h1>
        <br>
     </div>
   </div>
