--- a/servicedesk.html
+++ b/servicedesk.html
@@ -96,11 +96,11 @@ function myAccFunc() {
   var x = document.getElementById("demoAcc");
   if (x.className.indexOf("w3-show") == -1) {
     x.className += " w3-show";
-    x.previousElementSibling.className += " w3-black";
+    x.previousElementSibling.className += "";
   } else { 
     x.className = x.className.replace(" w3-show", "");
     x.previousElementSibling.className = 
-    x.previousElementSibling.className.replace(" w3-black", "");
+    x.previousElementSibling.className.replace("", "");
   }
 }
 
